<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAE2E2"
        tools:context=".views.view.courses.AddCoursesFragment">


        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CFCBCB"
            android:elevation="@dimen/_1ssp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            >

            <ImageView
                android:id="@+id/im_arrow_back"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingStart="@dimen/_5sdp"
                android:fontFamily="@font/mangabey"
                android:text="@string/add_course"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/view_bg"
            app:layout_constraintTop_toBottomOf="@id/topLayout" />


        <TextView
            android:id="@+id/tv_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/name_of_course"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFiled_etd_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:hint="@string/write_a_name_of_course"
            app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
            app:boxCornerRadiusBottomStart="@dimen/_15sdp"
            app:boxCornerRadiusTopEnd="@dimen/_15sdp"
            app:boxCornerRadiusTopStart="@dimen/_15sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintCircleRadius="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_course_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etd_course_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="top|start"
                android:padding="@dimen/_3sdp"
                android:shadowRadius="@integer/material_motion_duration_short_2"
                android:textColor="#043E9F"
                android:textSize="@dimen/_15sdp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_course_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/date_of_course"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFiled_etd_course_name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFiled_etd_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:hint="@string/write_a_date_of_course"
            app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
            app:boxCornerRadiusBottomStart="@dimen/_15sdp"
            app:boxCornerRadiusTopEnd="@dimen/_15sdp"
            app:boxCornerRadiusTopStart="@dimen/_15sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintCircleRadius="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_course_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etd_date_course"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="top|start"
                android:padding="@dimen/_3sdp"
                android:shadowRadius="@integer/material_motion_duration_short_2"
                android:textColor="#043E9F"
                android:textSize="@dimen/_15sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_radio_Group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFiled_etd_place">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_marginStart="@dimen/_16sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    android:id="@+id/radio_online"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:text="@string/type_Online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    android:id="@+id/radio_person"
                    android:text="@string/person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_course_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/goal_of_course"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_radio_Group" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFiled_etd_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:hint="@string/Goal_of_course"
            app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
            app:boxCornerRadiusBottomStart="@dimen/_15sdp"
            app:boxCornerRadiusTopEnd="@dimen/_15sdp"
            app:boxCornerRadiusTopStart="@dimen/_15sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintCircleRadius="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_course_goal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etd_goal_course"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="top|start"
                android:padding="@dimen/_3sdp"
                android:shadowRadius="@integer/material_motion_duration_short_2"
                android:textColor="#043E9F"
                android:textSize="@dimen/_15sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="@dimen/_100sdp"
                app:layout_constraintEnd_toStartOf="@+id/button_register"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:backgroundTint="@color/white"
                android:text="@string/cancel"
                android:textColor="@color/background_purple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:text="@string/post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_cancel"

                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>