<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_purple"
        tools:context=".views.CategoryFragment">


        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_1ssp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            >

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/recycle" />

            <TextView
                android:layout_marginVertical="@dimen/_24sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/mangabey"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/Recycling"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@drawable/view_bg"
            app:layout_constraintTop_toBottomOf="@id/topLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_course"
                android:text="@string/course"
                android:textColor="@color/background_purple"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/mangabey"
                android:layout_marginTop="@dimen/_100sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="@dimen/_20sdp" />

            <Button
                app:layout_constraintTop_toBottomOf="@+id/button_course"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/workshop"
                android:textColor="@color/background_purple"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/mangabey"

                android:id="@+id/button_workshop"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="@dimen/_20sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>